HW7 issues fix